Evotrader/test_results/test_1745988264/evolution_log.txt
Added /Users/bendickinson/Desktop/Evotrader to Python path
Successfully imported evotrader module from /Users/bendickinson/Desktop/Evotrader/evotrader/__init__.py
Setting up test environment with 10 strategies...


ERRORS:
Traceback (most recent call last):
  File "/Users/bendickinson/Desktop/Evotrader/benbot/evotrader_bridge/run_test_evolution.py", line 261, in <module>
    main()
    ~~~~^^
  File "/Users/bendickinson/Desktop/Evotrader/benbot/evotrader_bridge/run_test_evolution.py", line 196, in main
    bridge, strategies = setup_test_environment(
                         ~~~~~~~~~~~~~~~~~~~~~~^
        strategy_count=args.strategies,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        test_id=args.test_id
        ^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Users/bendickinson/Desktop/Evotrader/benbot/evotrader_bridge/run_test_evolution.py", line 92, in setup_test_environment
    bridge = EvoTraderBridge(config=test_config)
TypeError: EvoTraderBridge.__init__() got an unexpected keyword argument 'config'
